--- a/src/views/home.html
+++ b/src/views/home.html
@@ -5,12 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mercado Liebre</title>
+    <link rel = "icon" href = "\images\logomanosml.ico">  
     <link rel="stylesheet" href="/css/normalize.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
     <script src="https://kit.fontawesome.com/0ffcf80e36.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/css/styles.css"> 
 
 </head>
 <body>
@@ -130,7 +131,7 @@
     </main>
 
     <footer>
-    <div class="contenedor-footer">
+    <div class="contenedor-footer"> 
     <div class="secciones-footer">
         <p class="fas fa-credit-card"></p>
         <h4>Pagá con tarjeta o efectivo</h4> 
